--- a/sql/日期函数.md
+++ b/sql/日期函数.md
@@ -326,18 +326,18 @@ second(current_timestamp),
 -- 年季度
 concat(year(current_timestamp), '-', ceil(month(current_date)/3)),
 -- 年月
-date_format(current_timestamp ,'YYYY-MM'),
+date_format(current_timestamp ,'yyyy-MM'),
 -- 年周数
-date_format(current_timestamp ,'YYYY-w'), -- 按每年1月1日为第一周，周数偏大
+date_format(current_timestamp ,'yyyy-w'), -- 按每年1月1日为第一周，周数偏大
 concat(year(current_timestamp), '-', weekofyear(current_timestamp)) -- 偏小,
 -- 年月日
-date_format(current_timestamp ,'YYYY-MM-dd'),
+date_format(current_timestamp ,'yyyy-MM-dd'),
 -- 年月日时
-date_format(current_timestamp ,'YYYY-MM-dd HH'),
+date_format(current_timestamp ,'yyyy-MM-dd HH'),
 -- 年月日时分
-date_format(current_timestamp ,'YYYY-MM-dd HH:mm'),
+date_format(current_timestamp ,'yyyy-MM-dd HH:mm'),
 -- 年月日时分秒
-date_format(current_timestamp ,'YYYY-MM-dd HH:mm:ss')
+date_format(current_timestamp ,'yyyy-MM-dd HH:mm:ss')
 
 
 
