--- a/jdk/jdk8/树形递归.md
+++ b/jdk/jdk8/树形递归.md
@@ -1,40 +1,132 @@
 # 树形递归
 
+### 方式1 （队列）
+
+> 一次性加载树形，适用于数据量较小的场景；若数据量大，可改成懒加载，调用一次仅查询部分数据
+
 ```java
-	public List<PermissionTreeVO> listByTree() {
-        QSysPermission sysPermission = QSysPermission.sysPermission;
-        JPAQuery<SysPermission> query = super.jpaQueryFactory.select(sysPermission).from(sysPermission).where(sysPermission.logicDelete.eq(Boolean.FALSE));
-        List<PermissionTreeVO> permissionTreeVOS = new ArrayList<>();
-        List<SysPermission> sysPermissions = query.fetch();
-        if (!CollectionUtils.isEmpty(sysPermissions)) {
-            List<PermissionTreeVO> allNodes = Convertor.copyListProperties(sysPermissions, PermissionTreeVO::new);
-            //筛选出根节点
-            List<PermissionTreeVO> list = allNodes.stream().filter(parent -> !StringUtils.hasText(parent.getParentBid())).peek(
-                    //设置子节点信息
-                    parent -> parent.setChildren(getChildPermissionList(parent.getBid(), allNodes))
-            ).collect(Collectors.toList());
-            return list;
-        }
-        return new ArrayList<PermissionTreeVO>();
+//模拟数据库数据
+List<Menu> menus = Arrays.asList(
+    new Menu(1, "重庆市", 0),
+    new Menu(2, "渝中区", 1),
+    new Menu(3, "两路口", 2),
+    new Menu(4, "菜园坝", 2),
+    new Menu(5, "解放碑", 2),
+    new Menu(6, "江北区", 1),
+    new Menu(7, "观音桥", 6),
+    new Menu(8, "红土地", 6),
+    new Menu(9, "观音桥小面馆", 7),
+    new Menu(10, "观音桥家乐福", 7),
+    new Menu(11, "渝北区", 1),
+    new Menu(12, "洪湖东路", 11)
+);
+
+//queue.offerFirst(menus);
+List<Menu> roots = menus.stream().filter(node -> node.getParentId() != null && Objects.equals(node.getParentId(), 0)).collect(Collectors.toList());
+LinkedList<Menu> queue = new LinkedList<>(roots);
+
+while (!queue.isEmpty()) {
+    Menu root = queue.pollFirst();
+    List<Menu> childrenList = menus.stream().filter(node -> Objects.equals(root.getId(), node.getParentId())).collect(Collectors.toList());
+    if (!CollectionUtils.isEmpty(childrenList)) {
+        queue.addAll(childrenList);
+        root.setChildList(childrenList);
+    }
+}
+System.out.println(JSONObject.toJSONString(roots));
+```
+
+
+
+### 方式2（Java8 stream特性）
+
+```java
+public List<PermissionTreeVO> listByTree() {
+    QSysPermission sysPermission = QSysPermission.sysPermission;
+    JPAQuery<SysPermission> query = super.jpaQueryFactory.select(sysPermission).from(sysPermission).where(sysPermission.logicDelete.eq(Boolean.FALSE));
+    List<PermissionTreeVO> permissionTreeVOS = new ArrayList<>();
+    List<SysPermission> sysPermissions = query.fetch();
+    if (!CollectionUtils.isEmpty(sysPermissions)) {
+        List<PermissionTreeVO> allNodes = Convertor.copyListProperties(sysPermissions, PermissionTreeVO::new);
+        //筛选出根节点
+        List<PermissionTreeVO> list = allNodes.stream().filter(parent -> !StringUtils.hasText(parent.getParentBid())).peek(
+            //设置子节点信息
+            parent -> parent.setChildren(getChildPermissionList(parent.getBid(), allNodes))
+        ).collect(Collectors.toList());
+        return list;
+    }
+    return new ArrayList<PermissionTreeVO>();
+}
+
+/**
+ * 递归子节点
+ * @param bid 父业务id，对应节点的parentBid
+ * @param childrenNodes 子节点集合
+ * @return
+ */
+private List<PermissionTreeVO> getChildPermissionList(String bid, List<PermissionTreeVO> childrenNodes) {
+    List<PermissionTreeVO> list = childrenNodes.stream().filter(parent ->
+                                                                // 防止两个同时为空，导致死循环
+                                                                StringUtils.hasText(parent.getParentBid()) &&
+                                                                // 筛选出下一节点元素
+                                                                Objects.equals(bid, parent.getParentBid())).map(child -> {
+        // 设置子节点
+        child.setChildren(getChildPermissionList(child.getBid(), childrenNodes));
+        return child;
+    }).collect(Collectors.toList());
+    return list;
+}
+
+
+
+
+// 或者======================================================================================
+
+  	@Test
+    public void testtree(){
+        //模拟从数据库查询出来
+        List<Menu> menus = Arrays.asList(
+                new Menu(1,"根节点",0),
+                new Menu(2,"子节点1",1),
+                new Menu(3,"子节点1.1",2),
+                new Menu(4,"子节点1.2",2),
+                new Menu(5,"根节点1.3",2),
+                new Menu(6,"根节点2",1),
+                new Menu(7,"根节点2.1",6),
+                new Menu(8,"根节点2.2",6),
+                new Menu(9,"根节点2.2.1",7),
+                new Menu(10,"根节点2.2.2",7),
+                new Menu(11,"根节点3",1),
+                new Menu(12,"根节点3.1",11)
+        );
+
+        //获取父节点
+        List<Menu> collect = menus.stream().filter(m -> m.getParentId() == 0).map(
+                (m) -> {
+                    m.setChildList(getChildrens(m, menus));
+                    return m;
+                }
+        ).collect(Collectors.toList());
+        System.out.println("-------转json输出结果-------");
+        System.out.println(JSON.toJSON(collect));
     }
 
     /**
-     * 递归子节点
-     * @param bid 父业务id，对应节点的parentBid
-     * @param childrenNodes 子节点集合
-     * @return
+     * 递归查询子节点
+     * @param root  根节点
+     * @param all   所有节点
+     * @return 根节点信息
      */
-    private List<PermissionTreeVO> getChildPermissionList(String bid, List<PermissionTreeVO> childrenNodes) {
-        List<PermissionTreeVO> list = childrenNodes.stream().filter(parent ->
-			// 防止两个同时为空，导致死循环
-			StringUtils.hasText(parent.getParentBid()) &&
-            // 筛选出下一节点元素
-            Objects.equals(bid, parent.getParentBid())).map(child -> {
-                // 设置子节点
-                child.setChildren(getChildPermissionList(child.getBid(), childrenNodes));
-                return child;
-            }).collect(Collectors.toList());
-        return list;
+    private List<Menu> getChildrens(Menu root, List<Menu> all) {
+        List<Menu> children = all.stream().filter(m -> {
+            return Objects.equals(m.getParentId(), root.getId());
+        }).map(
+                (m) -> {
+                    m.setChildList(getChildrens(m, all));
+                    return m;
+                }
+        ).collect(Collectors.toList());
+        return children;
     }
 ```
 
