--- a/Java基础/算法题目.md
+++ b/Java基础/算法题目.md
@@ -63,3 +63,31 @@ for (int i = 0; i < dataList.size(); i++) {
 
 System.out.println(allotMap);
 ```
+
+# 100-200之间能被3整除的个数，并以三角形输出
+
+```java
+Supplier<Stream<Integer>> supplier = () -> Stream.iterate(100, i -> i + 1)
+                .limit(101)
+                .filter(i -> i % 3 == 0);
+int count = (int) supplier.get().count();
+System.out.println("100-200之间能被3整除的个数：" + count);
+
+List<Integer> list = supplier.get().collect(Collectors.toList());
+IntStream.range(0, count).forEach(i -> {
+    for (int j = 0; j < i; j++) {
+	System.out.print(list.get(i) + " ");
+    }
+    System.out.println();
+});
+```
+> 输出
+
+```bash
+105 
+108 108 
+111 111 111 
+114 114 114 114 
+117 117 117 117 117 
+120 120 120 120 120 120 
+```
