--- a/Java基础/设计模式/设计模式.md
+++ b/Java基础/设计模式/设计模式.md
@@ -51,3 +51,19 @@
 * 备忘录模式（Memento）
 * 迭代器模式（Iterator）
 * 解释器模式（Interpreter）
+
+
+#### 模板方法模式
+
+> 抽象类 + 抽象方法
+
+```java
+public abstract class AbstractXXX {
+
+    public void test(Param param) {
+        doExcute(param);
+    }
+    
+    abstract void doExcute(Param param);
+}
+```
