--- a/Java基础/算法题目.md
+++ b/Java基础/算法题目.md
@@ -91,3 +91,69 @@ IntStream.range(0, count).forEach(i -> {
 117 117 117 117 117 
 120 120 120 120 120 120 
 ```
+
+# 判断字符对称以及长度
+
+```java
+
+/**
+     *  判断括号成对出现
+     * @param str
+     * @return
+     */
+    public static boolean judge(String str) {
+        if (str == null || str.length() == 0) {
+            return false;
+        }
+        Map<Character, Character> map = new HashMap<>();
+        map.put(')', '(');
+        map.put(']', '[');
+        map.put('}', '{');
+
+        int len = str.length();
+        Queue<Character> queue = new LinkedList<>();
+        Character elem;
+        for (int i = 0; i < len; i++) {
+            elem = str.charAt(i);
+            if (map.containsValue(elem)) {
+                queue.offer(str.charAt(i));
+            } else if (map.containsKey(elem)) {
+                if (queue.isEmpty()) {
+                    return false;
+                }
+                if (Objects.equals(queue.peek(), map.get(elem))) {
+                    queue.poll();
+                } else {
+                    return false;
+                }
+            }
+        }
+        return queue.isEmpty();
+    }
+
+    /**
+     *  无重复字符的最长子串
+     * @param str abacabdcAca
+     * @return
+     */
+    public static int maxCount(String str) {
+        if (str == null || str.length() == 0) {
+            return 0;
+        }
+        int len = str.length();
+        int maxLength = 0;
+        Queue<Character> queue = new LinkedList<>();
+        for (int i = 0; i < len; i++) {
+            while (queue.contains(str.charAt(i))) {
+                queue.poll();
+            }
+            queue.offer(str.charAt(i));
+
+            if (queue.size() > maxLength) {
+                maxLength = queue.size();
+            }
+        }
+
+        return maxLength;
+    }
+```
