--- a/centos/运维命令.md
+++ b/centos/运维命令.md
@@ -25,3 +25,38 @@ head -100 catalina.out
 ```bash
 sz test.log
 ```
+
+
+
+### 获取指定位置的参数
+
+```sh
+# 获取第二列参数，并跳过第一行
+docker ps | awk '/\//{print $2}'
+
+ip a | awk '/inet/i{print $2}'
+
+ip a | grep -w inet | awk '/\//{print $2}'
+```
+
+
+
+### 读取文件
+
+```sh
+# 读取文件内容，以:分隔的第一列
+awk -F: '{print $1}' /root/a.txt
+
+cut -d: -f1 /root/a.txt
+
+# 读取文件单词个数
+wc -l | awk '{print $1}'
+
+# 获取指定文件的md5值，如：a.txt
+ls a.txt | xargs md5sum
+find . -type f | grep "a.txt" |  xargs md5sum
+
+# 输出a.txt非空内容
+awk '{if($0 != "") {print $0}}' a.txt
+```
+
