--- a/mysql/查看连接慢的进程.md
+++ b/mysql/查看连接慢的进程.md
@@ -13,4 +13,43 @@ from information_schema.processlist
 where command = 'Sleep'
 and time > 2*60
 order by time desc
+
+
+
+-- 查看所有连接
+show full processlist;
+select * from information_schema.processlist where DB = 'health_management';
+
+-- 查看线程配置
+show status like 'Thread%';
+
+-- 查看连接配置信息
+show variables like '%connect%';
+
+-- 生成睡眠过长的id命令
+SELECT * FROM information_schema.`PROCESSLIST` WHERE command != "Sleep" ORDER BY time DESC;
+
+-- 查询非睡眠状态的连接
+SELECT
+	concat( 'kill ', id, ';' ) 
+FROM
+	information_schema.PROCESSLIST 
+WHERE
+	DB = 'department_internal_control'
+	AND command != 'Sleep'
+	AND time > 5 * 60 
+ORDER BY
+	time DESC;
+
+-- 查看连接客户端信息
+select client_ip,count(client_ip) as client_num from (select substring_index(host,':' ,1) as client_ip from information_schema.processlist ) as connect_info group by client_ip order by client_num desc;
+
+-- 生成睡眠过长的id命令
+select concat('kill ', id, ';') from information_schema.processlist where Command != 'Sleep' and Time > 300 order by Time desc;
+
+-- 查看服务器装填
+show status;
+
+-- 查看超时设置
+SHOW VARIABLES LIKE '%timeout%';
 ```
