--- a/mysql/查看连接慢的进程.md
+++ b/mysql/查看连接慢的进程.md
@@ -52,4 +52,6 @@ show status;
 
 -- 查看超时设置
 SHOW VARIABLES LIKE '%timeout%';
+
+select GROUP_CONCAT(CONCAT('kill ', id) SEPARATOR ';') from information_schema.`PROCESSLIST` where COMMAND = 'Sleep' and TIME > 10000;
 ```
