--- a/Java基础/算法题目.md
+++ b/Java基础/算法题目.md
@@ -157,3 +157,78 @@ IntStream.range(0, count).forEach(i -> {
         return maxLength;
     }
 ```
+
+
+
+### 两数之和
+
+> 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。你可以按任意顺序返回答案。
+>
+
+```java
+private static int[] m2(int[] ints, int target) {
+    int length = ints.length;
+    int[] result = new int[2];
+    Map<Integer, Integer> map = new HashMap<>();
+    for (int i = 0; i < length; i++) {
+        if (map.containsKey(target - ints[i])) {
+            result[0] = map.get(target - ints[i]);
+            result[1] = i;
+            break;
+        }
+        map.put(ints[i], i);
+    }
+    return result;
+}
+```
+
+
+
+### **无重复字符的最长子串**
+
+> 给定一个字符串 `s` ，请你找出其中不含有重复字符的 **最长子串** 的长度。
+
+```java
+	/**
+     * 无重复字符的最长子串
+     * 实现：滑动窗口，将字符串转为数组，遍历数组，往map或者HashSet中存入数据，并且字符串次数+1
+     * 若数组中已存在指定元素，移除指定元素，每次存入元素时获取两个窗口最大的那个
+     *
+     * @param s
+     * @return
+     */
+    private static int lengthOfLongestSubstring(String s) {
+        int len = s.length();
+        Map<Character, Integer> map = new HashMap<>();
+        int left = 0, right = 0, result = 0;
+        while (left < len && right < len) {
+            if (!map.containsKey(s.charAt(right))) {
+                map.put(s.charAt(right), right++);
+                result = Math.max(result, right - left);
+            } else {
+                map.remove(s.charAt(left++));
+            }
+        }
+        return result;
+    }
+
+	/**
+	 * 方式2 
+	 */
+    public int lengthOfLongestSubstring1(String s) {
+        int n = s.length();
+        Set set = new HashSet<>();
+        int ans = 0, i = 0, j = 0;
+        while (i < n && j < n) {
+            // try to extend the range [i, j]
+            if (!set.contains(s.charAt(j))) {
+                set.add(s.charAt(j++));
+                ans = Math.max(ans, j - i);
+            } else {
+                set.remove(s.charAt(i++));
+            }
+        }
+        return ans;
+    }
+```
+
