web static resource

--- a/springboot/文件上传到任意磁盘.md
+++ b/springboot/文件上传到任意磁盘.md
@@ -13,3 +13,46 @@ spring:
 http://localhost:8080/test.txt
 ```
 
+
+
+### springboot 2.6.11
+
+### 1.配置方式
+
+```yaml
+server:
+  compression:
+    enabled: true
+    min-response-size: 1024
+    mime-types: # 开启gzip
+      - image/png
+      - image/jpeg
+      - image/jpg
+      - text/html
+      - application/javascript
+      - text/css
+      - application/octet-stream
+      - application/json
+
+spring:
+  mvc:
+    static-path-pattern: /**
+  web:
+    resources:
+      static-locations:
+        - classpath:/static/
+        - file:d:/xxx/
+```
+
+### 2.编码方式
+
+```java
+//SpringBoot2.x建议实现接口WebMvcConfigurer来处理mvc相关的配置
+@Override
+public void addResourceHandlers(ResourceHandlerRegistry registry) {
+	registry.addResourceHandler("/static/**")
+	.addResourceLocations("classpath:/static/")		
+	.addResourceLocations("file:D:/static/");
+}
+```
+
