--- a/hutool/反射.md
+++ b/hutool/反射.md
@@ -5,11 +5,12 @@
 ```java
 M demo = new M();
 demo.setA(BigDecimal.TEN);
-Arrays.stream(ReflectUtil.getFields(demo.getClass(), field -> "java.math.BigDecimal".equals(field.getType().getName()))).forEach(field -> {
-    Object fieldValue = ReflectUtil.getFieldValue(demo, field);
-    if (null == fieldValue) {
-        ReflectUtil.setFieldValue(demo, field, BigDecimal.ZERO);
-    }
-});
+Arrays.stream(ReflectUtil.getFields(demo.getClass(), field -> field.getType() == BigDecimal.class)).
+        forEach(field -> {
+            Object fieldValue = ReflectUtil.getFieldValue(demo, field);
+            if (null == fieldValue) {
+                ReflectUtil.setFieldValue(demo, field, BigDecimal.ZERO);
+            }
+        });
 System.out.println(demo);
 ```
