--- a/Dbeaver/问题.md
+++ b/Dbeaver/问题.md
@@ -7,3 +7,17 @@
 ```sh
 -Dfile.encoding=UTF-8
 ```
+
+## 数据格式
+
+> 数值不要逗号格式化
+
+* 窗口>首选项>搜索“数据格式”>勾选“禁用数字格式化”
+
+## maven驱动下载慢
+
+* 窗口>首选项>搜索“maven”>添加
+
+```sh
+http://maven.aliyun.com/nexus/content/groups/public/
+```
