--- a/Dbeaver/问题.md
+++ b/Dbeaver/问题.md
@@ -21,3 +21,9 @@
 ```sh
 http://maven.aliyun.com/nexus/content/groups/public/
 ```
+
+## dbeaver连接sqlserver报错
+
+* 错误：The server selected protocol version TLS10 is not accepted by client preferences [TLS13, TLS12]
+
+> 编辑${JAVA_HOME}/conf/security/java.security文件，搜索`jdk.tls.disabledAlgorithms=SSLv3`，删除里面的TLSv1, TLSv1.1，这2个配置是Java高版本中增加的，低版本不存在这2个配置
