--- a/kingbase/人大金仓开发笔记.md
+++ b/kingbase/人大金仓开发笔记.md
@@ -141,6 +141,12 @@ select * from wmsys.s_material group by matl_code;
 SET enable_seqscan = off;
 explain select * from wmsys.s_material;
 SET enable_seqscan = on;
+
+-- 查询活跃且等待锁的进程
+SELECT * FROM sys_stat_activity WHERE state != 'idle';
+
+-- 根据pid释放死锁
+SELECT sys_terminate_backend(pid);
 ```
 
 
